# Syntacts

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CNAME  LICENSE  README.md  TODO.md  _config.yml  amp.md  beepR.csv  beepR.json  build.md  building.md  cpp.md  cs.md  devices.txt  faq.md  feed.xml  gui.md  hardware.md  imgui.ini  index.html  index.md  myCue.json  myCue.tact  python.md  robots.txt  sitemap.xml  software.md  start.md  tutorials.md  x.json
.github/ISSUE_TEMPLATE/: bug_report.md
_includes/: footer.html  header.html
_pages/: build.md  tutorials.md
_sass/: minima.scss
_sass/minima/: _syntax-highlighting.scss
_sass/minima/skins/: classic.scss
assets/: main.css  main.css.map
build-clang/: CMakeCache.txt  Makefile  SyntactsConfig.cmake  SyntactsTargets.cmake  cmake_install.cmake
build-clang/cmake/portaudio/: portaudioConfigVersion.cmake  portaudioTargets.cmake
build-clang/dll/: Makefile  cmake_install.cmake
build-clang/examples/: Makefile  cmake_install.cmake
build-clang/gui/: Makefile  cmake_install.cmake
c/: CMakeLists.txt  syntacts.cpp  syntacts.h
cmake/: SyntactsConfig.cmake.in
csharp/: Example.cs  README.md  README.txt  Syntacts.cs  csharp.csproj  open.txt
csharp/Syntacts/: Syntacts.cs
csharp/examples/example_basic/: example_basic.cs
csharp/examples/example_devices/: example_devices.cs  example_devices.csproj
csharp/examples/example_library/: example_library.cs  example_library.csproj
csharp/examples/example_music/: example_music.cs  example_music.csproj
csharp/examples/example_sequences/: example_sequences.cs
csharp/examples/example_signals/: example_signals.cs
csharp/examples/example_spatializer/: example_spatializer.cs
dll/: CMakeLists.txt  dll.cpp  dll.hpp  syntacts-c.cpp  syntacts-c.hpp  test.cpp
examples/: CMakeLists.txt  evan.cpp  ex_headphone.cpp  example.cpp  example1.cpp  example_basic.cpp  example_benchmark.cpp  example_cloning.cpp  example_cp.cpp  example_devices.cpp  example_funkytown.cpp  example_library.cpp  example_music.cpp  example_processes.cpp  example_rtti.cpp  example_sequences.cpp  example_signals.cpp  example_spatializer.cpp  pa_devs.c  pa_saw_mono.cpp  paex_saw.cpp
faq/: index.html
gui/: CMakeLists.txt  gui-detail.hpp  gui-main.cpp  gui.cpp  lockless.cpp  syntacts.rc  tfx-gui.cpp  tfx-gui_2ch.cpp  tfx.rc
gui/src/: ChannelWindow.hpp  Custom.cpp  Custom.hpp  Debugger.cpp  Debugger.hpp  Designer.cpp  Designer.hpp  DesignerWindow.hpp  DeviceBar.cpp  DeviceBar.hpp  DragAndDrop.cpp  DragAndDrop.hpp  FileWatcher.cpp  FileWatcher.hpp  Gui.cpp  Gui.hpp  InfoBar.hpp  Library.cpp  Library.hpp  LibraryWindow.hpp  Nodes.cpp  Nodes.hpp  Palette.cpp  Palette.hpp  Player.cpp  Player.hpp  PolyBezier.cpp  PolyBezier.hpp  Sequencer.cpp  Sequencer.hpp  SequencerTab.hpp  SignalNode.hpp  SignalNodes.hpp  Spatializer.cpp  Spatializer.hpp  StatusBar.cpp  StatusBar.hpp  Theme.cpp  Theme.hpp  Visualizer.cpp  (+11 more)
gui/src/ImGui/: Custom.cpp  Custom.hpp  CustomWidgets.cpp  CustomWidgets.hpp  Helpers.hpp  ImSequencer.cpp  ImSequencer.hpp  PolyBezier.cpp  PolyBezier.hpp  Sequencer.cpp  Sequencer.hpp  Theme.cpp  Theme.hpp
hardware/: index.html
include/: Filesystem.hpp  syntacts  tact
include/Syntacts/: AudioFile.hpp  Config.hpp  Cue.hpp  Curve.hpp  Envelope.hpp  Error.hpp  Generator.hpp  Library.hpp  Macros.hpp  Memory.hpp  Operator.hpp  Oscillator.hpp  Scalar.hpp  Sequence.hpp  Serialization.hpp  Session.hpp  Signal.hpp  Source.hpp  Syntacts.hpp  Tween.hpp
include/Syntacts/Detail/: SPSCQueue.hpp  Tween.inl
include/Tact/: Config.hpp  Curve.hpp  Envelope.hpp  Error.hpp  General.hpp  Library.hpp  Macros.hpp  MemoryPool.hpp  Operator.hpp  Oscillator.hpp  Process.hpp  Sequence.hpp  Serialization.hpp  Session.hpp  Signal.hpp  Spatializer.hpp  Util.hpp
include/Tact/Detail/: Operator.inl  Oscillator.inl  Sequence.inl  Signal.inl
include/TactorFX/: ADSR.hpp  Config.hpp  Cue.hpp  Detail.inl  Envelope.hpp  Generator.hpp  Oscillator.hpp  TactorFX.hpp
logo/: logo.ai
plugin/: CMakeLists.txt  plugin.cpp  plugin.hpp  test.cpp
python/: .gitignore  example.py  example_basic.py  example_devices.py  example_library.py  example_music.py  example_sequences.py  example_spatializer.py  example_toh.py  syntacts.py
python/relative/folder/: py.aiff  py.json  py.sig  (+1 more)
software/: index.html
src/Syntacts/: AudioFile.cpp  AudioFile.hpp  Cue.cpp  Curve.cpp  Envelope.cpp  Generator.cpp  Helpers.hpp  Library.cpp  Operator.cpp  Oscillator.cpp  Scalar.cpp  Sequence.cpp  Serialization.cpp  Session.cpp  Signal.cpp  Source.cpp  Syntacts.cpp  Tween.cpp
src/Tact/: Curve.cpp  Envelope.cpp  General.cpp  Library.cpp  MemoryPool.cpp  Operator.cpp  Oscillator.cpp  Process.cpp  Sequence.cpp  Session.cpp  Signal.cpp  Spatializer.cpp  Util.cpp
src/TactorFX/: ADSR.cpp  ADSR.h  Cue.cpp  Envelope.cpp  Generator.cpp  Helpers.hpp  Oscillator.cpp  TactorFX.cpp
template/: .gitignore  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Christiansen_six.cpp  atomic_float.cpp  benchmark.cpp  clone.cpp  clone2.cpp  cue_test.cpp  cue_test_AS.cpp  cue_test_PA.cpp  devs.cpp  dll.cpp  double_sin_six.cpp  evan_testing.cpp  exp_api.cpp  json.cpp  memory.cpp  paex_mono_asio_channel_select.c  paex_sine.c  quickLatency.cpp  rubber_types.hpp  saw_six_ADSR.cpp  saw_six_ASR.cpp  saw_six_ch.cpp  serial.cpp  serial1.cpp  serial2.cpp  serial_lib.cpp  serial_lib.hpp  sine_six.cpp  sine_six_ASR.cpp  sine_six_channel.c  six_channel_testing.cpp  six_channel_testing_2.cpp  te.cpp  testLoop.cpp  two_channel_testing.cpp  two_channel_testing_time.cpp  type_erasure.cpp
tools/: package_release.py
tutorials/: bracelet.md  building.md  cpp.md  cs.md  draw.md  gui.md  index.html  iros2020.md  matlab.md  python.md  unity.md
tutorials/bracelet/: index.html
tutorials/building/: index.html
tutorials/cpp/: index.html
tutorials/cs/: index.html
tutorials/draw/: index.html
tutorials/gui/: index.html
tutorials/matlab/: index.html
tutorials/python/: index.html
tutorials/unity/: index.html
unity/: Syntacts.cs
unity/SyntactsDemo/: .gitignore  open.txt
(+17 files in other folders)
